Added confirmation for mass disconnect
Mass disconnecting invite-roles by invite URL only now prompts the invoker to confirm the action in case they forgot to specify a role.

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
         "token": ""
     },
     "PersistenceConfig": {
-        "db_name": "data.db",
+        "db_name": "invite_role_bot.db",
         "auto_vacuum": "FULL",
         "write_ahead_logging": true
     }
