Lower default heartbeat timeout
When the WebSocket connection is lost, it normally takes 60 seconds before it gets restarted.  If multiple members join the same guild during this period then invite use data is invalidated.  This is a temporary workaround in lieu of a more invasive fix.

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "BotConfig": {
         "client_args": {
             "chunk_guilds_at_startup": false,
+            "heartbeat_timeout": 20,
             "max_messages": null,
             "member_cache_flags": {
                 "_class": "MemberCacheFlags",
